<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="10dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_lister"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/linkWebsite"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageViewLink"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/list" />

            <TextView
                android:id="@+id/textViewDescTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/desc"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewFeatureTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/featureTitle"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewFeature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feature"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/buttonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/click_to_start_listing" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>